--- a/Fubao_Web/Fubao_Web/About.html
+++ b/Fubao_Web/Fubao_Web/About.html
@@ -17,6 +17,7 @@
               <li><a href="About.html">About</a></li>
               <li><a href="Gallery.html">Gallery</a></li>
               <li><a href="Online.html">Online</a></li>
+              <li><a href="Word.html">Word</a></li>
             </ul>
           </div>
 </header>
